[gd_scene load_steps=3 format=3 uid="uid://dj6sl8n2aujfj"]

[ext_resource type="Script" path="res://state_machine/nodes/state_machine_node.gd" id="1_pt2mh"]
[ext_resource type="Texture2D" uid="uid://dp87jsrvjqb8e" path="res://UI/cross-mark_lorc.png" id="2_bovbh"]

[node name="StateMachineNode" type="GraphElement"]
custom_minimum_size = Vector2(768, 512)
offset_right = 456.0
offset_bottom = 471.0
resizable = true
script = ExtResource("1_pt2mh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"FloatingPanel"

[node name="ContentContainer" type="MarginContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ContentContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/ContentContainer/VBoxContainer"]
layout_mode = 2

[node name="SMNameEdit" type="LineEdit" parent="PanelContainer/ContentContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "State Machine Name"

[node name="DelButton" type="Button" parent="PanelContainer/ContentContainer/VBoxContainer/Header"]
visible = false
modulate = Color(0.882353, 0.439216, 0.333333, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("2_bovbh")
expand_icon = true

[node name="LinksButton" type="Button" parent="PanelContainer/ContentContainer/VBoxContainer/Header"]
modulate = Color(1, 0.917647, 0.654902, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "+1"
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ContentContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanelContainer" type="PanelContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer"]
layout_mode = 2

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer"]
layout_mode = 2
text = "Parameters"
horizontal_alignment = 1

[node name="ParametersContainer" type="PanelContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/ParametersContainer"]
layout_mode = 2

[node name="ParametersRoot" type="VBoxContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/ParametersContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ParamsEdit" type="HBoxContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/ParametersContainer/MarginContainer/ParametersRoot"]
unique_name_in_owner = true
layout_mode = 2

[node name="ParamTpOptionButton" type="OptionButton" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/ParametersContainer/MarginContainer/ParametersRoot/ParamsEdit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 5
popup/item_0/text = "Float"
popup/item_0/id = 0
popup/item_1/text = "Integer"
popup/item_1/id = 1
popup/item_2/text = "Boolean"
popup/item_2/id = 2
popup/item_3/text = "Trigger"
popup/item_3/id = 3
popup/item_4/text = "Timer"
popup/item_4/id = 4

[node name="Label" type="Label" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/ParametersContainer/MarginContainer/ParametersRoot/ParamsEdit/ParamTpOptionButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Add"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParametersEdit" type="Button" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/ParametersContainer/MarginContainer/ParametersRoot/ParamsEdit"]
unique_name_in_owner = true
modulate = Color(1, 0.917647, 0.654902, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Edit"

[node name="Label2" type="Label" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer"]
layout_mode = 2
text = "States"
horizontal_alignment = 1

[node name="StatesContainer" type="PanelContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/StatesContainer"]
layout_mode = 2

[node name="StatesRoot" type="VBoxContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/StatesContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddStateButton" type="Button" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/StatesContainer/MarginContainer/StatesRoot"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="GridContainer" type="PanelContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2

[node name="StateGrid" type="GraphEdit" parent="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/GridContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_type_variation = &"SubGraphEdit"
minimap_enabled = false
show_menu = false

[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="text_submitted" from="PanelContainer/ContentContainer/VBoxContainer/Header/SMNameEdit" to="." method="_on_sm_name_edit_text_submitted"]
[connection signal="item_selected" from="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/ParametersContainer/MarginContainer/ParametersRoot/ParamsEdit/ParamTpOptionButton" to="." method="_on_param_tp_option_button_item_selected"]
[connection signal="pressed" from="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/ParametersContainer/MarginContainer/ParametersRoot/ParamsEdit/ParametersEdit" to="." method="start_edit_parameters"]
[connection signal="pressed" from="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/LeftPanelContainer/MarginContainer/ScrollContainer/MainContainer/StatesContainer/MarginContainer/StatesRoot/AddStateButton" to="." method="_on_add_state_button_pressed"]
[connection signal="connection_request" from="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/GridContainer/MarginContainer/StateGrid" to="." method="_on_graph_edit_connection_request"]
[connection signal="mouse_entered" from="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/GridContainer/MarginContainer/StateGrid" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/ContentContainer/VBoxContainer/HBoxContainer/GridContainer/MarginContainer/StateGrid" to="." method="_on_mouse_exited"]
